--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -4,6 +4,7 @@
 <head>
     <title>Blog EMS</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" /> </head>
+    <link rel="stylesheet" href="css/style.css"> 
 
 <body>
     <p>Get your greeting <a href="/greeting">here</a></p>
