update movies and books issue #4

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -19,7 +19,7 @@
     </section>
     <section>
         <b>Películas</b>
-        <p>(Contenido)</p>
+        <p>Contenido sobre peliculas</p>
     </section>
     <!-- Pie de pagina -->
     <footer>(c) Evolución y Mantenimiento Software
